# Zoft-low-latency-signal-relay

./: .gitignore  README.md  requirements.txt
configs/: instruments.yml  thresholds.yml
cpp/: CMakeLists.txt
cpp/include/: feed_handler.hpp  parity_engine.hpp  ring_buffer.hpp
cpp/src/: feed_handler.cpp  main.cpp  parity_engine.cpp  ring_buffer.cpp
python/: alerting.py  config.py  daemon.py
python/clients/: zerodha_client.py
python/dashboards/: grafana.json
scripts/: build.sh  run_daemon.sh
